--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Run the Hello World App
-      run: python hello.py.
+    - name: Run Hello World App
+      run: python ./hello.py.
