Update helloworld.yml according to youtube

--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -19,4 +19,4 @@ jobs:
     #     python-version: '3.x'
 
     - name: Run Hello World App
-      run: python3 hello.py.
+      run: python .github/workflows/hello.py.
